// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugins - Output > defaults - Production 1`] = `
{
  "assetModuleFilename": "static/assets/[name].[contenthash:8][ext]",
  "chunkFilename": "static/js/async/[name].[contenthash:8].js",
  "chunkFormat": "commonjs",
  "chunkLoading": "lynx",
  "devtoolModuleFilenameTemplate": "[relative-resource-path]",
  "filename": "static/js/[name].[contenthash:8].js",
  "hashFunction": "xxhash64",
  "path": "<WORKSPACE>/dist",
  "pathinfo": false,
  "publicPath": "/",
  "webassemblyModuleFilename": "static/wasm/[contenthash:8].module.wasm",
}
`;

exports[`Plugins - Output > defaults 1`] = `
{
  "assetModuleFilename": "static/assets/[name].[contenthash:8][ext]",
  "chunkFilename": "static/js/async/[name].js",
  "chunkFormat": "commonjs",
  "chunkLoading": "lynx",
  "devtoolModuleFilenameTemplate": "[relative-resource-path]",
  "filename": "static/js/[name].js",
  "hashFunction": "xxhash64",
  "path": "<WORKSPACE>/dist",
  "pathinfo": false,
  "publicPath": "/",
  "webassemblyModuleFilename": "static/wasm/[contenthash:8].module.wasm",
}
`;

exports[`Plugins - Output > output.filename 1`] = `
{
  "assetModuleFilename": "static/assets/[name].[contenthash:8][ext]",
  "chunkFilename": "static/js/async/[name].js",
  "chunkFormat": "commonjs",
  "chunkLoading": "lynx",
  "devtoolModuleFilenameTemplate": "[relative-resource-path]",
  "filename": "static/js/[name].js",
  "hashFunction": "xxhash64",
  "path": "<WORKSPACE>/dist",
  "pathinfo": false,
  "publicPath": "/",
  "webassemblyModuleFilename": "static/wasm/[contenthash:8].module.wasm",
}
`;

exports[`Plugins - Output > output.filename.js 1`] = `
{
  "assetModuleFilename": "static/assets/[name].[contenthash:8][ext]",
  "chunkFilename": "static/js/async/[name].js",
  "chunkFormat": "commonjs",
  "chunkLoading": "lynx",
  "devtoolModuleFilenameTemplate": "[relative-resource-path]",
  "filename": "static/js/[name].js",
  "hashFunction": "xxhash64",
  "path": "<WORKSPACE>/dist",
  "pathinfo": false,
  "publicPath": "/",
  "webassemblyModuleFilename": "static/wasm/[contenthash:8].module.wasm",
}
`;
